# Smart-Library-Backend

Smart-Bookstore/: pyproject.toml
Smart-Bookstore/app/: app.py
Smart-Bookstore/app/Common/Database/: database.py  models.py
Smart-Bookstore/app/Common/Middleware/: logger.py  security.py
Smart-Bookstore/app/Common/Services/: author_services.py  book_services.py  user_services.py
Smart-Bookstore/app/Routes/: authors.py  books.py  users.py
Smart-Bookstore/app/Schemas/: author.py
smart_bookstore/: README.md  pyproject.toml  raw_documents.txt
smart_bookstore/app/: app.py
smart_bookstore/app/common/AI/: chatbot.py
smart_bookstore/app/common/CRUD/: author_crud.py  book_crud.py  user_crud.py
smart_bookstore/app/common/database/: database.py  models.py
smart_bookstore/app/middleware/: auth.py  logger.py
smart_bookstore/app/routes/: authors.py  books.py  chat.py  users.py
smart_bookstore/app/schemas/: author.py  book.py  chat.py  user.py
smart_bookstore/app/utils/: prompts.py
smart_bookstore/chroma_db/c8d49c29-656a-4816-a5b9-f4b9382cefc6/: index_metadata.pickle
smart_bookstore/tests/: tests.py
