[tool.poetry]
name = "smart-bookstore"
version = "0.1.0"
description = ""
authors = ["Saleh <slxw191@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.1"
uvicorn = "^0.30.1"
sqlalchemy = "^2.0.31"
psycopg2-binary = "^2.9.9"
python-jose = "^3.3.0"
pytest = "^8.2.2"
httpx = "^0.27.0"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

